--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,19 @@
 .header-color {
-	background: #6441a5; 
-	background: -webkit-linear-gradient(
-		to right,
-		#63159f,
-		#6441a5
-	); 
-	background: linear-gradient(
-		to right,
-		#63159f,
-		#6441a5
-    ); 
+	background: #6441a5;
+	background: -webkit-linear-gradient(to right, #63159f, #6441a5);
+	background: linear-gradient(to right, #63159f, #6441a5);
+}
+
+.drawer-color {
+	background: #6441a5;
+	background: -webkit-linear-gradient(to right, #63159f, #6441a5);
+	background: linear-gradient(to right, #63159f, #6441a5);
 }
 
 .landing-grid {
 	background: #232526;
 	background: -webkit-linear-gradient(to top, #414345, #232526);
-    background: linear-gradient(to top, #414345, #232526);
+	background: linear-gradient(to top, #414345, #232526);
 
 	text-align: center;
 	position: fixed;
@@ -71,27 +69,27 @@
 	font-size: 5em;
 }
 
-.projects-grid{
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    margin: auto;
+.projects-grid {
+	display: flex;
+	justify-content: space-between;
+	width: 80%;
+	margin: auto;
 }
 
-.contact-body{
-    margin: auto;
-    background: rgb(35, 37, 38);
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    padding-top: 2em;
+.contact-body {
+	margin: auto;
+	background: rgb(35, 37, 38);
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	justify-content: center;
+	padding-top: 2em;
 }
 
-.contact-grid{
-    text-align: center;
-    justify-content: center;
-    width: 80%;
-    height: 550px;
-    background: white;
+.contact-grid {
+	text-align: center;
+	justify-content: center;
+	width: 80%;
+	height: 550px;
+	background: white;
 }
