--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,6 @@
 	background: linear-gradient(to right, #63159f, #6441a5);
 }
 
-.drawer-color {
-	background: #6441a5;
-	background: -webkit-linear-gradient(to right, #63159f, #6441a5);
-	background: linear-gradient(to right, #63159f, #6441a5);
-}
-
 .landing-grid {
 	background: #232526;
 	background: -webkit-linear-gradient(to top, #414345, #232526);
@@ -23,12 +17,6 @@
 	height: 100%;
 }
 
-.avatar-img {
-	height: 250px;
-	margin-top: 5em;
-	border-radius: 20px;
-}
-
 .banner-text {
 	background-color: rgb(35, 37, 38);
 	opacity: 0.8;
@@ -37,12 +25,78 @@
 	border-radius: 10px;
 }
 
-.banner-text h1 {
-	padding-left: 20px;
-	padding-top: 20px;
-	font-size: 66px;
-	font-weight: bold;
-	color: white;
+@media only screen and (max-width: 900px) {
+	.avatar-img {
+		height: 150px;
+		margin-top: 5em;
+		border-radius: 20px;
+	}
+
+	.banner-text h1 {
+		padding-left: 20px;
+		padding-top: 20px;
+		font-size: 33px;
+		font-weight: bold;
+		color: white;
+	}
+
+	.banner-text p {
+		color: white;
+		padding: 1em;
+		font-size: 15px;
+	}
+
+	.social-links {
+		display: flex;
+		justify-content: space-between;
+		width: 50%;
+		margin: auto;
+	}
+
+	.projects-grid {
+		width: 100%;
+		margin: auto;
+	}
+
+	.hide-Desktop {
+		display: none;
+	}
+}
+
+@media only screen and (min-width: 901px) {
+	.avatar-img {
+		height: 250px;
+		margin-top: 5em;
+		border-radius: 20px;
+	}
+
+	.banner-text h1 {
+		padding-left: 20px;
+		padding-top: 20px;
+		font-size: 66px;
+		font-weight: bold;
+		color: white;
+	}
+
+	.banner-text p {
+		color: white;
+		padding: 1em;
+		font-size: 20px;
+	}
+
+	.social-links {
+		display: flex;
+		justify-content: space-between;
+		width: 25%;
+		margin: auto;
+	}
+
+	.projects-grid {
+		display: flex;
+		justify-content: space-between;
+		width: 80%;
+		margin: auto;
+	}
 }
 
 .banner-text hr {
@@ -51,45 +105,7 @@
 	margin: auto;
 }
 
-.banner-text p {
-	color: white;
-	padding: 1em;
-	font-size: 20px;
-}
-
-.social-links {
-	display: flex;
-	justify-content: space-between;
-	width: 25%;
-	margin: auto;
-}
-
 .social-links i {
 	color: white;
 	font-size: 5em;
-}
-
-.projects-grid {
-	display: flex;
-	justify-content: space-between;
-	width: 80%;
-	margin: auto;
-}
-
-.contact-body {
-	margin: auto;
-	background: rgb(35, 37, 38);
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	justify-content: center;
-	padding-top: 2em;
-}
-
-.contact-grid {
-	text-align: center;
-	justify-content: center;
-	width: 80%;
-	height: 550px;
-	background: white;
 }
