--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
     background: linear-gradient(to top, #414345, #232526);
 
 	margin: 0;
+	padding: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
 		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 		"Helvetica Neue", sans-serif;
@@ -11,8 +12,3 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
-	color: blanchedalmond;
-}
