--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
+	overflow-y: scroll;
 }
 
 .banner-text {
@@ -23,6 +24,21 @@
 	width: 75%;
 	margin: auto;
 	border-radius: 10px;
+}
+
+.banner-text hr {
+	border-top: thin solid white;
+	width: 50%;
+	margin: auto;
+}
+
+@media only screen and (max-width: 1024px) {
+	.categories-tabs {
+		padding-top: 3em;
+		background: #6441a5;
+		background: -webkit-linear-gradient(to right, #63159f, #6441a5);
+		background: linear-gradient(to right, #63159f, #6441a5);
+	}
 }
 
 @media only screen and (max-width: 900px) {
@@ -43,7 +59,7 @@
 	.banner-text p {
 		color: white;
 		padding: 1em;
-		font-size: 15px;
+		font-size: 20px;
 	}
 
 	.social-links {
@@ -53,13 +69,10 @@
 		margin: auto;
 	}
 
-	.projects-grid {
-		width: 100%;
-		margin: auto;
-	}
-
-	.hide-Desktop {
-		display: none;
+	.social-links i {
+		color: white;
+		font-size: 3em;
+		margin-bottom: 0.25em;
 	}
 }
 
@@ -91,21 +104,9 @@
 		margin: auto;
 	}
 
-	.projects-grid {
-		display: flex;
-		justify-content: space-between;
-		width: 80%;
-		margin: auto;
+	.social-links i {
+		color: white;
+		font-size: 5em;
+		margin-bottom: 0.25em;
 	}
-}
-
-.banner-text hr {
-	border-top: thin solid white;
-	width: 50%;
-	margin: auto;
-}
-
-.social-links i {
-	color: white;
-	font-size: 5em;
 }
